test/test_4.c
//error
int d;
int a(];
int c;
